--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@ div.box hr{
 
                 <h2>Tres informes de referencia</h2>
                 <p>Los informes finales de Seminario de Licenciatura aprobados en el segundo semestre de 2024 son los primeros en publicarse en el <a href="https://repositorio.uchile.cl/" target="_blank">Repositorio Académico de la Universidad de Chile</a>.</p>
-                <p>Para que los(as) estudiantes en Seminario de Licenciatura cuenten con referencias para el diseño de un informe que se reconozca, a primera vista, como un informe de Licenciado(a), fue necesario sumar 3 informes aprobados en semestres anteriores:</p>
+                <p>Para que los(as) estudiantes en Seminario de Licenciatura cuenten con referencias para el diseño de un informe que se reconozca, a primera vista, como un informe de Licenciado(a) en Diseño, fue necesario sumar 3 informes aprobados en semestres anteriores:</p>
                 <div class="box">
                     <div><a href="https://repositorio.uchile.cl/handle/2250/204611" target="_blank"><img src="viz/portada-luciana.png" /></a></div>
                     <div><a href="https://repositorio.uchile.cl/handle/2250/204626" target="_blank"><img src="viz/portada-antonia.png" /></a></div>
