--- a/index.html
+++ b/index.html
@@ -367,13 +367,7 @@ div.box hr{
             </article>
         </main>
         <footer>
-            <p>
-                <small>
-                    <a href="https://github.com/profesorfaco/troncal" target="_blank">Diseño y visualización de información</a> | Este ejercicio, preparado por
-                    <a rel="cc:attributionURL dct:creator" property="cc:attributionName" href="https://github.com/profesorfaco">profesorfaco</a>, es publicado bajo licencia
-                    <a href="https://creativecommons.org/licenses/by-nc/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer">CC BY-NC 4.0</a>
-                </small>
-            </p>
+            <p><small>Desarrollado por <a rel="cc:attributionURL dct:creator" property="cc:attributionName" href="https://faco.cl">FACO</a>. Publicado bajo licencia <a href="https://creativecommons.org/licenses/by-nc/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer">CC BY-NC 4.0</a></small></p>
         </footer>
 
         <script>
