--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             :root {
                 --acento: #7d3b6a;
                 --acentuado: #905f76;
-                --gris: #7E7278;
+                --gris: #7e7278;
             }
             * {
                 margin: 0;
@@ -26,7 +26,7 @@
             }
             a {
                 color: var(--acento);
-                text-decoration: underline solid #D0B8BC 10%;
+                text-decoration: underline solid #d0b8bc 10%;
                 transition: all ease 0.1s;
             }
             a:hover {
@@ -202,58 +202,67 @@
             #informes tr th:last-child {
                 text-align: center;
             }
-div.box {
-  width:100%;
-  margin:1.5rem 0;
-}
+            div.box {
+                width: 100%;
+                margin: 1.5rem 0;
+            }
 
-div.box div{
-  width:33%;
-  float:left;
-}
+            div.box div {
+                width: 33%;
+                float: left;
+            }
 
-div.box div.landscape{
-  width:34%;
-  float:left;
-}
+            div.box div.landscape {
+                width: 34%;
+                float: left;
+            }
 
-div.box div img{
-    width:calc(100% - 2rem);
-    margin-right:2rem;
-}
+            div.box div img {
+                width: calc(100% - 2rem);
+                margin-right: 2rem;
+            }
 
-div.box div.landscape img{
-    width:100%;
-    margin-right: 0;
-}
+            div.box div.landscape img {
+                width: 100%;
+                margin-right: 0;
+            }
 
-a img{
-    border:4px solid white;
-    filter: grayscale(90%);
-}
+            a img {
+                border: 4px solid #faf8f5;
+                filter: grayscale(90%);
+            }
 
-a img:hover{
-    filter: grayscale(0); 
-    transition: all ease 1s;   
-}
+            a img:hover {
+                filter: grayscale(0);
+                transition: all ease 1s;
+            }
 
-div.box hr{
-    clear: both;
-    border:none;
-}
-
-
-
-      </style>
+            div.box hr {
+                clear: both;
+                border: none;
+            }
+        </style>
     </head>
     <body>
         <header>
             <h1>Seminario de Licenciatura II</h1>
             <h2>Datos del Segundo semestre de 2024</h2>
             <p>Seminario de Licenciatura es una asignatura de dos niveles. El segundo nivel concluye con la entrega de un informe y la defensa formal oral del mismo ante una comisión.</p>
-            <p>Tal comisión, designada por la Jefatura de Carrera, se compone por el (la) Profesor(a) Guía y dos académicas(os) más. Cada comisión designada se encarga de establecer una calificación final en escala de notas entre 1,0 y 7,0.</p>
-            <p><em>En el segundo semestre de 2024 las comisiones designadas por la Jefatura de Carrera establecieron calificaciones aprobatorias para <span id="algunos"></span> informes</em>.</p>
-            <p><em>Son <span id="menos"></span> los informes aprobados que, a mediados del primer semestre de 2025, ya están publicados en el <a href="https://repositorio.uchile.cl/" target="_blank">Repositorio Académico de la Universidad de Chile</a></em>; cada publicación se debe al ajuste del informe a las normas de la Dirección de Servicios de Información y Bibliotecas (SISIB), el reglamento de la Facultad de Arquitectura y Urbanismo para Memorias / Tesis / Seminarios de Título de Pre y Postgrado, y los acuerdos entre Biblioteca FAU y Coordinación de Cursos Tutelados en Diseño.</p>
+            <p>
+                Tal comisión, designada por la Jefatura de Carrera, se compone por el (la) Profesor(a) Guía y dos académicas(os) más. Cada comisión designada se encarga de establecer una calificación final en escala de notas entre 1,0 y
+                7,0.
+            </p>
+            <p>
+                <em>En el segundo semestre de 2024 las comisiones designadas por la Jefatura de Carrera establecieron calificaciones aprobatorias para <span id="algunos"></span> informes</em>.
+            </p>
+            <p>
+                <em>
+                    Son <span id="menos"></span> los informes aprobados que, a mediados del primer semestre de 2025, ya están publicados en el
+                    <a href="https://repositorio.uchile.cl/" target="_blank">Repositorio Académico de la Universidad de Chile</a>
+                </em>
+                ; cada publicación se debe al ajuste del informe a las normas de la Dirección de Servicios de Información y Bibliotecas (SISIB), el reglamento de la Facultad de Arquitectura y Urbanismo para Memorias / Tesis / Seminarios de
+                Título de Pre y Postgrado, y los acuerdos entre Biblioteca FAU y Coordinación de Cursos Tutelados en Diseño.
+            </p>
         </header>
         <main>
             <article>
@@ -307,10 +316,10 @@ div.box hr{
                                 stroke-width: 0.3;
                             }
                             .vm {
-                                stroke: #7E7278;
+                                stroke: #7e7278;
                             }
                             .is {
-                                stroke: #7E7278;
+                                stroke: #7e7278;
                             }
                             .hide {
                                 display: none;
@@ -356,18 +365,35 @@ div.box hr{
                 </table>
 
                 <h2>Tres informes de referencia</h2>
-                <p>Los informes finales de Seminario de Licenciatura aprobados en el segundo semestre de 2024 son los primeros en publicarse en el <a href="https://repositorio.uchile.cl/" target="_blank">Repositorio Académico de la Universidad de Chile</a>.</p>
-                <p>Para que los(as) estudiantes en Seminario de Licenciatura cuenten con referencias para el diseño de un informe que se reconozca, a primera vista, como un informe de Licenciado(a) en Diseño, fue necesario sumar 3 informes aprobados en semestres anteriores:</p>
+                <p>
+                    Los informes finales de Seminario de Licenciatura aprobados en el segundo semestre de 2024 son los primeros en publicarse en el
+                    <a href="https://repositorio.uchile.cl/" target="_blank">Repositorio Académico de la Universidad de Chile</a>.
+                </p>
+                <p>
+                    Para que los(as) estudiantes en Seminario de Licenciatura cuenten con referencias para el diseño de un informe que se reconozca, a primera vista, como un informe de Licenciado(a) en Diseño, fue necesario sumar 3 informes
+                    aprobados en semestres anteriores:
+                </p>
                 <div class="box">
-                    <div><a href="https://repositorio.uchile.cl/handle/2250/204611" target="_blank"><img src="viz/portada-luciana.png" /></a></div>
-                    <div><a href="https://repositorio.uchile.cl/handle/2250/204626" target="_blank"><img src="viz/portada-antonia.png" /></a></div>
-                    <div class="landscape"><a href="https://repositorio.uchile.cl/handle/2250/204631" target="_blank"><img src="viz/portada-cristina.png" /></a></div>
-                    <hr/>
+                    <div>
+                        <a href="https://repositorio.uchile.cl/handle/2250/204611" target="_blank"><img src="viz/portada-luciana.png" /></a>
+                    </div>
+                    <div>
+                        <a href="https://repositorio.uchile.cl/handle/2250/204626" target="_blank"><img src="viz/portada-antonia.png" /></a>
+                    </div>
+                    <div class="landscape">
+                        <a href="https://repositorio.uchile.cl/handle/2250/204631" target="_blank"><img src="viz/portada-cristina.png" /></a>
+                    </div>
+                    <hr />
                 </div>
             </article>
         </main>
         <footer>
-            <p><small>Desarrollado por <a rel="cc:attributionURL dct:creator" property="cc:attributionName" href="https://faco.cl">FACO</a>. Publicado bajo licencia <a href="https://creativecommons.org/licenses/by-nc/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer">CC BY-NC 4.0</a></small></p>
+            <p>
+                <small>
+                    Desarrollado por <a rel="cc:attributionURL dct:creator" property="cc:attributionName" href="https://faco.cl">FACO</a>. Publicado bajo licencia
+                    <a href="https://creativecommons.org/licenses/by-nc/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer">CC BY-NC 4.0</a>
+                </small>
+            </p>
         </footer>
 
         <script>
