--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 <figure>
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 165 125" id="slope">
                         <style>
-                            line{stroke-width:.3}.is,.vm{stroke:#DFC7CE}.hide{display:none}
+                            line{stroke-width:.3}.is,.vm{stroke:#AD71A3}.hide{display:none}
                         </style>
                         <g>
                             <circle cx="5" cy="2.5" r=".5" fill="silver" />
