--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@
                 </figure>
             </article>
             <article>
-                <h2>Selección de informes publicados</h2>
-                <p>Los <span id="publicados"></span> informes publicados en biblioteca tienen una calificación promedio de <span id="promedio"></span>. La siguiente tabla muestra los que están en o sobre el promedio:</p>
+                <h2>Informes publicados</h2>
+                <p>Los <span id="publicados"></span> informes publicados en biblioteca tienen una calificación promedio de <span id="promedio"></span>. La siguiente tabla, que se ordena de mayor a menor calificación, vincula a todo lo publicado:</p>
 
                 <table id="informes">
                     <thead>
@@ -245,7 +245,7 @@
                                 }
                             }
                         }
-                        if (d.nota_final > 6 && d.repositorio) {
+                        if (d.repositorio) {
                             seleccion.push(d);
                         }
                     }
